fixed layout issues

--- a/braindev/styles/main-lg.css
+++ b/braindev/styles/main-lg.css
@@ -50,12 +50,6 @@
   .socialLinks {
     grid-template-columns: repeat(6, 50px);
   }
-
-  /* .footerInfo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  } */
 }
 
 @media screen and (min-width: 1000px) {
@@ -71,6 +65,5 @@
     flex-direction: row-reverse;
     justify-content: center;
     align-content: center;
-    gap: 10rem;
   }
 }
